AOC 2025 day 4 improvements